# CPP-libs

./: Array.hpp  BoundingBox.cpp  BoundingBox.hpp  CardiacMesh.cpp  CardiacMesh.hpp  Doxyfile  Facet.cpp  Facet.hpp  FastFourierTransformation.cpp  FastFourierTransformation.hpp  Makefile.in  NeighbourSearch.cpp  NeighbourSearch.hpp  Plane.cpp  Plane.hpp  Profiler.cpp  Profiler.hpp  README  README.md  RandomNumber.cpp  RandomNumber.hpp  SWITCHES.mk  algorithm.hpp  autogen.sh  cmdline.cpp  cmdline.hpp  config.h.in  configure  configure.ac  gipl.cpp  gipl.h  line.cpp  line.hpp  lists.h  lookuptable.hpp  make_tags.sh  maps.h  my_regular_grid.cpp  my_regular_grid.hpp  myexception.cpp  (+23 more)
MCubes/: Cube.cpp  Cube.hpp  Doxyfile  Grid.cpp  Grid.hpp  MCubes-config.in  MCubes.hpp  Makefile.in  Mesh.cpp  Mesh.hpp  Tables.hpp  Triangle.hpp
MCubes/Testing/: makefile  test_MCubes.cpp
Shape/: Cube.cpp  Cube.hpp  Cylinder.cpp  Cylinder.hpp  IsoscelesTriangle.cpp  IsoscelesTriangle.hpp  Makefile.in  Prism.cpp  Prism.hpp  Shape-config.in  Shape.cpp  Shape.hpp  Sphere.cpp  Sphere.hpp
Shape/Testing/: makefile  test_Shape.cpp
Symbolic/: Bytecode.cpp  Bytecode.hpp  Definitions.h  Lexer.cpp  Lexer.hpp  Makefile.in  Node.cpp  Node.hpp  Parser.cpp  Parser.hpp  Symbolic-config.in  Symbolic.hpp  Symbolic_Exception.cpp  Symbolic_Exception.hpp
Symbolic/Testing/: makefile  test_Symbolic.cpp
demos/: Line_demo.cpp  Plane.cpp  Point_demo.cpp  XYData_demo.cpp  gen_line.cpp  gipl_demo.cpp  gipl_sphere.cpp  gipldo.cpp  heart.elem  heart.pts  heart.tri  lists_demo.cpp  makefile  myIniFiles_test.cpp  myInifiles_demo.cpp  myinifiles.cpp  regression.c  test_RandomNumber.cpp  test_myalgorithm.cpp
demos/PointCurve/: Test.node  curvature.cpp  generate_ellipse.cpp  main.cpp  makefile
demos/SurfaceMesh/: interpolate_deformation.cpp  makefile  test.ini  test_results.cpp
demos/XYData/: front_width.cpp  linleastsquares.cpp  makefile  mean_value.cpp
demos/myIO/: exists.cpp  makefile
demos/myMath/: dicom_transform.cpp  makefile  mymath.cpp
myFl/: Fl_BoundedFloat_Input.cpp  Fl_BoundedFloat_Input.hpp  Fl_BoundedInt_Input.cpp  Fl_BoundedInt_Input.hpp  Fl_Functions.cpp  Fl_Functions.hpp  Fl_Gnuplot.cpp  Fl_Gnuplot.hpp  Fl_Gnuplot_Window.cpp  Fl_Gnuplot_Window.hpp  Makefile.in  MyGraphWindow.hpp  TipWin.cpp  TipWin.hpp  ValueSlider.cpp  ValueSlider.hpp  myFl-config.in
myFl/examples/: demo2_FFT.cpp  demo3_FFT.cpp  demo_FFT.cpp  fltk_ex.c  makefile  octave_fft.m  signal_analyzer.cpp  tip.gnuplot
myImg/: IGBdata.cpp  IGBdata.hpp  IGBheader.cpp  IGBheader.hpp  Makefile.in  PNGwrite.cpp  PNGwrite.hpp  myImg-config.in
myImg/demos/: IGB2dat.cpp  IGBdiff.cpp  dat2IGB.cpp  makefile
python/: makefile  mycmdline.py  mygeometry.py  mymatplotlib.py
shellscripts/: TeXClean  backup  colorgcc  colselect  crypt  cwdof  cwdof.bash_completion.sh  decrypt  eps2png  gen_carp_cmd.sh  gen_cmd.sh  lcp  make_ln  meminfo  ncat  pdfglue  pdfgnuplot.sh  pdftrim.sh  png2pdf.sh  ppids.bash_completion.sh  ppids.sh  shrinkpdf  staticlinebreak  svg2pdf.sh  svngrep  sync.sh  texgrep  xvecgz.sh
